# translation_management

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
translation/api/: permissions.py  serializers.py  urls.py  views.py
translation/api/utils/: utils.py
translation/core/context_processors/: year.py
translation/core/templatetags/: user_filters.py
translation/core/utils/: utils.py
translation/management/: settings.py  urls.py
translation/orders/: admin.py  forms.py  models.py  urls.py  views.py
translation/orders/migrations/: 0001_initial.py  0002_add_requester_model.py  0003_added_activity_model.py  0004_new_fields_to_translationrequest.py  0005_fix_translationrequest_model.py  0006_add_document_model.py  0007_add_outsource_model.py  0008_add_company_model.py  0009_extend_requester_name.py  0010_add_fields_to_requester.py
translation/orders/utils/: choices.py  paginator.py
translation/templates/: base.html
translation/templates/includes/: footer.html  header.html
translation/templates/orders/: add_requester.html  index.html  list_requesters.html
