[tool.poetry]
name = "translation-management"
version = "0.1.0"
description = ""
authors = ["Ilya Kutilin <ilyakutilin@yandex.ru>"]
readme = "README.md"
packages = [{include = "translation_management"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.3.0"
pep8-naming = "^0.13.3"
flake8-return = "^1.2.0"
flake8-isort = "^6.0.0"
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
